5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4153/executions/1747_3091.log
== TEST (2019-05-16 10:26:20) 
-- CODE:
soma = 0
while(r != "X"):
	r = input("Insira o resultado: ").upper()
	if(r == "V"):
		x = 3
	elif(r == "E"):
		x = 1
	elif(r == "D"):
		x = 0
	soma = soma + x
print(soma)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    while(r != "X"):
NameError: name 'r' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 10:26:31) 
-- CODE:
soma = 0
x = 0
while(r != "X"):
	r = input("Insira o resultado: ").upper()
	if(r == "V"):
		x = 3
	elif(r == "E"):
		x = 1
	elif(r == "D"):
		x = 0
	soma = soma + x
print(soma)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    while(r != "X"):
NameError: name 'r' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 10:26:43) 
-- CODE:
soma = 0
X = 0
while(r != "X"):
	r = input("Insira o resultado: ").upper()
	if(r == "V"):
		x = 3
	elif(r == "E"):
		x = 1
	elif(r == "D"):
		x = 0
	soma = soma + x
print(soma)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    while(r != "X"):
NameError: name 'r' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 10:27:40) 
-- CODE:
r = input("Insira o resultado: ")
soma = 0

while(r != "X"):
	if(r == "V"):
		x = 3
	elif(r == "E"):
		x = 1
	elif(r == "D"):
		x = 0
	soma = soma + x
	 = input("Insira o resultado: ")
print(soma)
-- ERROR:
File "XXXX", line 12
    = input()
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 10:27:49) 
-- CODE:
r = input("Insira o resultado: ")
soma = 0

while(r != "X"):
	if(r == "V"):
		x = 3
	elif(r == "E"):
		x = 1
	elif(r == "D"):
		x = 0
	soma = soma + x
	 r = input("Insira o resultado: ")
print(soma)
-- ERROR:
File "XXXX", line 12
    r = input()
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 10:27:54) 
-- CODE:
r = input("Insira o resultado: ")
soma = 0

while(r != "X"):
	if(r == "V"):
		x = 3
	elif(r == "E"):
		x = 1
	elif(r == "D"):
		x = 0
	soma = soma + x
	r = input("Insira o resultado: ")
print(soma)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 11, in <module>
    soma = soma + x
NameError: name 'x' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 10:29:55) 
-- CODE:
r = input("Insira o resultado: ")
soma = 0
y = 0
while(r != "X"):
	if(r == "V"):
		y = 3
	elif(r == "E"):
		y = 1
	elif(r == "D"):
		y = 0
	soma = soma + y
	r = input("Insira o resultado: ")
print(soma)
-- OUTPUT:
7
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 10:30:37) 
-- CODE:
r = input("Insira o resultado: ").upper()
soma = 0
y = 0
while(r != "X"):
	if(r == "V"):
		y = 3
	elif(r == "E"):
		y = 1
	elif(r == "D"):
		y = 0
	soma = soma + y
	r = input("Insira o resultado: ").upper
print(soma)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 12, in <module>
    r = input().upper
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 10:32:42) 
-- CODE:
r = input("Insira o resultado: ").upper()
soma = 0
y = 0
while(r != "X"):
	if(r == "V"):
		y = 3
	elif(r == "E"):
		y = 1
	elif(r == "D"):
		y = 0
	soma = soma + y
	r = input("Insira o resultado: ").upper
print(soma)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 12, in <module>
    r = input().upper
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 10:33:11) 
-- CODE:
r = input("Insira o resultado: ").upper()
soma = 0
y = 0
while(r != "X"):
	if(r == "V"):
		y = 3
	elif(r == "E"):
		y = 1
	elif(r == "D"):
		y = 0
	soma = soma + y
	r = input("Insira o resultado: ").upper
print(soma)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 12, in <module>
    r = input().upper
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 10:33:29) 
-- CODE:
r = input("Insira o resultado: ").upper()
soma = 0
y = 0
while(r != "X"):
	if(r == "V"):
		y = 3
	elif(r == "E"):
		y = 1
	elif(r == "D"):
		y = 0
	soma = soma + y
	r = input("Insira o resultado: ").upper
print(soma)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 12, in <module>
    r = input().upper
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 10:33:38) 
-- CODE:
r = input("Insira o resultado: ").upper()
soma = 0
y = 0
while(r != "X"):
	if(r == "V"):
		y = 3
	elif(r == "E"):
		y = 1
	elif(r == "D"):
		y = 0
	soma = soma + y
	r = input("Insira o resultado: ").upper
print(soma)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 12, in <module>
    r = input().upper
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 10:33:45) 
-- CODE:
r = input("Insira o resultado: ").upper()
soma = 0
y = 0
while(r != "X"):
	if(r == "V"):
		y = 3
	elif(r == "E"):
		y = 1
	elif(r == "D"):
		y = 0
	soma = soma + y
	r = input("Insira o resultado: ").upper
print(soma)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 12, in <module>
    r = input().upper
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 10:34:16) 
-- CODE:
r = input("Insira o resultado: ").upper()
soma = 0
y = 0
while(r != "X" and w != "X"):
	if(r == "V"):
		y = 3
	elif(r == "E"):
		y = 1
	elif(r == "D"):
		y = 0
	soma = soma + y
	w = input("Insira o resultado: ").upper
print(soma)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    while(r != "X" and w != "X"):
NameError: name 'w' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 10:34:24) 
-- CODE:
r = input("Insira o resultado: ").upper()
soma = 0
y = 0
while(r != "X" and w != "X"):
	if(r == "V"):
		y = 3
	elif(r == "E"):
		y = 1
	elif(r == "D"):
		y = 0
	soma = soma + y
	w = input("Insira o resultado: ").upper
print(soma)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    while(r != "X" and w != "X"):
NameError: name 'w' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 10:34:41) 
-- CODE:
r = input("Insira o resultado: ").upper()
soma = 0
y = 0
while(r != "X"):
	if(r == "V"):
		y = 3
	elif(r == "E"):
		y = 1
	elif(r == "D"):
		y = 0
	soma = soma + y
	r = input("Insira o resultado: ").upper
print(soma)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 12, in <module>
    r = input().upper
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 10:34:47) 
-- CODE:
r = input("Insira o resultado: ").upper()
soma = 0
y = 0
while(r != "X"):
	if(r == "V"):
		y = 3
	elif(r == "E"):
		y = 1
	elif(r == "D"):
		y = 0
	soma = soma + y
	r = input("Insira o resultado: ").upper
print(soma)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 12, in <module>
    r = input().upper
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 10:41:39) 
-- CODE:
r = input("Insira o resultado: ").upper()
soma = 0
y = 0
j = 0
while(r != "X"):
	if(r == "V"):
		y = 3
		j = j + 1
	elif(r == "E"):
		y = 1
		j = j + 1
	elif(r == "D"):
		y = 0
		j = j + 1
	soma = soma + y
	r = input("Insira o resultado: ").upper
print(soma)
print((soma/j)/100)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 16, in <module>
    r = input().upper
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 10:41:45) 
-- CODE:
r = input("Insira o resultado: ").upper()
soma = 0
y = 0
j = 0
while(r != "X"):
	if(r == "V"):
		y = 3
		j = j + 1
	elif(r == "E"):
		y = 1
		j = j + 1
	elif(r == "D"):
		y = 0
		j = j + 1
	soma = soma + y
	r = input("Insira o resultado: ").upper
print(soma)
print((soma/j)/100)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 16, in <module>
    r = input().upper
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 10:45:32) 
-- CODE:
r = input("Insira o resultado: ").upper()
soma = 0
y = 0
j = 0
while(r != "X"):
	if(r == "V"):
		y = 3
		j = j + 1
	elif(r == "E"):
		y = 1
		j = j + 1
	elif(r == "D"):
		y = 0
		j = j + 1
	soma = soma + y
	r = input("Insira o resultado: ").upper
m = j * 3
p = (soma / j) * 1 /100
print(m)
print(p)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 16, in <module>
    r = input().upper
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 10:46:05) 
-- CODE:
r = input("Insira o resultado: ").upper()
soma = 0
y = 0
j = 0
while(r != "X"):
	if(r == "V"):
		y = 3
		j = j + 1
	elif(r == "E"):
		y = 1
		j = j + 1
	elif(r == "D"):
		y = 0
		j = j + 1
	soma = soma + y
	
m = j * 3
p = (soma / j) * 1 /100
print(m)
print(p)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 16, in <module>
    r = input().upper
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 10:46:46) 
-- CODE:
r = "w"
soma = 0
y = 0
j = 0
while(r != "X"):
	r = input("Insira o resultado: ").upper
	if(r == "V"):
		y = 3
		j = j + 1
	elif(r == "E"):
		y = 1
		j = j + 1
	elif(r == "D"):
		y = 0
		j = j + 1
	soma = soma + y
	
m = j * 3
p = (soma / j) * 1 /100
print(m)
print(p)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    r = input().upper
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 10:46:53) 
-- CODE:
r = "w"
soma = 0
y = 0
j = 0
while(r != "X"):
	r = input("Insira o resultado: ").upper
	if(r == "V"):
		y = 3
		j = j + 1
	elif(r == "E"):
		y = 1
		j = j + 1
	elif(r == "D"):
		y = 0
		j = j + 1
	soma = soma + y
	
m = j * 3
p = (soma / j) * 1 /100
print(m)
print(p)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    r = input().upper
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
